Optimized imports and correct few method documentations.